<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:gravity="center"
        android:text="@string/about_text" />
    
    <TextView
        android:id="@+id/site_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:gravity="center"
        android:text="@string/app_site" />
    
    <TextView
        android:id="@+id/beta_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:gravity="center"
        android:text="@string/beta_site" />

    <SlidingDrawer
        android:id="@+id/slidingGithub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/changelist"
        android:handle="@+id/handle"
        android:topOffset="40dp" >

        <Button
            android:id="@+id/handle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_github" >
        </Button>

        <RelativeLayout
            android:id="@+id/changelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#b5b5b5"
                android:dividerHeight="1dp" />
        </RelativeLayout>
    </SlidingDrawer>

</LinearLayout>