<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:stretchColumns="*" >

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/unstable_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_unstable" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/unstable_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/mipmaps_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_mipmaps" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/mipmaps_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/stretch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_stretch" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/stretch_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/frameskip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/set_frameskip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/current_frames"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />

                    <SeekBar
                        android:id="@+id/frame_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:max="5"
                        android:progress="0" />
                </LinearLayout>
            </LinearLayout>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/experimental_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/experimental_opts" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/dynarec_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_dynarec" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/dynarec_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/region_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/select_region" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/region_spinner"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" >
                    </Spinner>
                </LinearLayout>
            </LinearLayout>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/limitfps_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_limitfps" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/limitfps_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/render_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_render" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/render_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/cheatdisk_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/default_disk" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/cheat_disk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>
            
            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/force_gpu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_force_gpu" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/force_gpu_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>
            
            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/enable_zhack_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:text="@string/select_enable_zhack" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <de.ankri.views.Switch
                        android:id="@+id/enable_zhack_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <Button
                    android:id="@+id/debug_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="8"
                    android:text="@string/menu_debug" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>